--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <section class="sobre">
                     <h2>Sobre os projetos</h2>
                     <div class="conteudo_sobre">
+                        <picture>
                             <img src="images/imagem-seção-sobre.jpg" alt="Homem apresentando um produto  para um grupo de pessoas.">
+                        </picture>
                             <div class="texto_sobre">
                                 <h3><span class="tag">Participantes</span><br>mais de 80 alunos organizados em 16 grupos</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nam blanditiis tenetur, cum impedit quos nihil repudiandae quas obcaecati laborum fugiat voluptas corrupti adipisci ea neque accusamus, esse, tempore assumenda. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est enim nam esse temporibus ex nesciunt accusantium molestias laudantium tenetur blanditiis, sunt nihil magnam eligendi error earum. Sit dolorum fuga eligendi!</p>
